fix(current-user): align current user componet to right of toolbar

--- a/src/app/features/budget/budget-toolbar/budget-toolbar.component.scss
+++ b/src/app/features/budget/budget-toolbar/budget-toolbar.component.scss
@@ -7,4 +7,8 @@
   .month-selector {
     margin-left: 64px;
   }
+
+  .right-align {
+    margin-left: auto;
+  }
 }
